platform/istio/mesh/allow-apps.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-apps
  namespace: apps
spec:
  action: ALLOW
  rules:
    - {}
